RESOLVED FIXED72519
AX: Searching mechanism gets stuck when searching tables
https://bugs.webkit.org/show_bug.cgi?id=72519
Summary AX: Searching mechanism gets stuck when searching tables
chris fleizach
Reported 2011-11-16 10:04:25 PST
The searching mechanism that exists within WebCore can get stuck when it searches within tables. That's because the children() of a table (stay with me) includes element's (like TableHeaderColumnContainer) who's own children are also within the table's children (i.e. they both contain the same cells).. this leads to returning the same element that we started with.
Attachments
patch (5.85 KB, patch)
2011-11-28 10:07 PST, chris fleizach
webkit.review.bot: commit-queue-
patch (6.04 KB, patch)
2011-11-28 10:14 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2011-11-28 10:07:26 PST
WebKit Review Bot
Comment 2 2011-11-28 10:10:45 PST
Comment on attachment 116774 [details] patch Attachment 116774 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10676346
Early Warning System Bot
Comment 3 2011-11-28 10:12:18 PST
chris fleizach
Comment 4 2011-11-28 10:14:44 PST
chris fleizach
Comment 5 2011-11-30 15:25:54 PST
Note You need to log in before you can comment on or make changes to this bug.