AX: Searching mechanism gets stuck when searching tables https://bugs.webkit.org/show_bug.cgi?id=72519

Source/WebCore: 

When searching through the elements within a data table, the children() method should not
be used, since that contains elements (like a table header column) which have the same children
as the table itself. Instead the cells() should be searched.

Reviewed by Beth Dakin.

Test: platform/mac/accessibility/search-when-element-starts-in-table.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::findMatchingObjects):

LayoutTests: 

Reviewed by Beth Dakin.

* platform/mac/accessibility/search-when-element-starts-in-table-expected.txt: Added.
* platform/mac/accessibility/search-when-element-starts-in-table.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@101560 bbb929c8-8fbe-4397-9dbb-9b2b20218538